--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl" ng-app="store">
+<html lang="pl" ng-app="bboost">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,24 +8,33 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://use.fontawesome.com/59ea93251c.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/sweetalert2/4.2.6/sweetalert2.min.css">
-    <link rel="stylesheet" type="text/css" href="{{ asset('main.css', 'css') }}">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
 <div class="side-nav-menu" role="navigation">
+    <div class="company-logo">
+        <img id="side-nav-company-logo" src="img/black.jpg" alt="bboost.eu elo boosting company logo">
+    </div>
+
+
+    <div class="webpage-navigation">
+
+        <button class="webpage-nav-button">Home</button>
+        <button class="webpage-nav-button">Boosting</button>
+        <button class="webpage-nav-button">Guides</button>
+        <button class="webpage-nav-button">News</button>
+        <button class="webpage-nav-button">FAQ</button>
+        <button class="webpage-nav-button">Rules</button>
+        <button class="webpage-nav-button">Contact</button>
+        <button class="webpage-nav-button">About Us</button>
+
+    </div>
 
 </div>
-<div class="main-content">
-
-    <div class="main-page-option">
-        <h1>{[{ 2 + 3 }]}</h1>
-    </div>
-    <div class="main-page-option">
-        <h2></h2>
-    </div>
-    <div class="main-page-option">
-        <h3></h3>
-    </div>
+<div class="main-content" ng-controller="contentCtrl as bboost">
+    <home-page-content></home-page-content>
 </div>
+
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
@@ -33,8 +42,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/1.0.10/cookieconsent.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.matchHeight/0.7.0/jquery.matchHeight-min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
-<script src="{{ asset('angular.min.js','js') }}"></script>
-<script src="{{ asset('app.js', 'js') }}"></script>
+<script src="js/angular.min.js"></script>
+<script src="js/app.js"></script>
+<script src="js/main.js"></script>
 
 
 </body>
