--- a/public/html/home.html
+++ b/public/html/home.html
@@ -1,1 +1,11 @@
-<div style="color: green;">Działa</div>
+<div class="col-sm-4  tab1" >
+
+</div>
+
+<div class="col-sm-4 tab2">
+
+</div>
+
+<div class="col-sm-4 tab3">
+
+</div>
