--- a/html/index.html
+++ b/html/index.html
@@ -34,11 +34,8 @@
 <div class="main-content" ng-controller="contentCtrl as bboost">
 
 
-    <div ng-include="{"></div>
+    <div ng-include="'html/boosting.html'"></div>
 
-
-    <home-page-content ng-show="false"></home-page-content>
-    <boosting-page-content ng-show="bboost.site.boosting"></boosting-page-content>
 </div>
 
 
