--- a/public/html/boosting.html
+++ b/public/html/boosting.html
@@ -1,1 +1,6 @@
-<div style="color: red;">boosting</div>
+<div class="col-xs-12">
+    <div class="col-sm-3">soloQ</div>
+    <div class="col-sm-3">duoQ</div>
+    <div class="col-sm-3"></div>
+    <div class="col-sm-3"></div>
+</div>
