--- a/public/html/boosting.html
+++ b/public/html/boosting.html
@@ -1,6 +1,14 @@
-<div class="col-xs-12">
-    <div class="col-sm-3">soloQ</div>
-    <div class="col-sm-3">duoQ</div>
-    <div class="col-sm-3"></div>
-    <div class="col-sm-3"></div>
+<div class="boosting-box" >
+    <div class="col-sm-3">
+        <button>Division <br/> Boost</button>
+    </div>
+    <div class="col-sm-3">
+        <button>DuoQ <br/> Boost</button>
+    </div>
+    <div class="col-sm-3">
+        <button>Placement <br/> Games</button>
+    </div>
+    <div class="col-sm-3">
+        <button>Wins <br/> Boost</button>
+    </div>
 </div>
