--- a/public/html/contact.html
+++ b/public/html/contact.html
@@ -1,1 +1,50 @@
-CONTACT
+<div class="contact-box">
+
+    <div class="box-area">
+        <div class="social-box">
+            <a href="mailto:contact@bboost.eu"><i class="fa fa-envelope fa-5x email"></i></a>
+            </br>
+            <h4 class="text-center">E-mail</h4>
+            <p>contact@bboost.eu</p>
+        </div>
+        <div class="social-box">
+            <a onclick="Skype.tryAnalyzeSkypeUri('call', '0');" href="skype:bboost.eu?chat">
+                <i role="button" class="fa fa-skype fa-5x skype "></i>
+            </a>
+            <h4 class="text-center">Skype</h4>
+            <p>bboost.eu</p>
+        </div>
+        <div class="social-box">
+            <a href="https://www.facebook.com/bboost.eu"><i class="fa fa-facebook fa-5x facebook"></i></a>
+            </br>
+            <h4 class="text-center">Facebook</h4>
+            <p>BBoost.eu</p>
+        </div>
+        <div class="clearfix"></div>
+        <h1>Contact form</h1>
+        <form role="form" action="?" method="post">
+            <div class="column">
+                <div class="form-group">
+                    <label>Name</label>
+                    <input type="text" class="form-control"  name="Name">
+                </div>
+                <div class="form-group">
+                    <label>Email Address</label>
+                    <input type="email" class="form-control"  name="Email">
+                </div>
+                <div class="form-group">
+                    <label>Summoner Name</label>
+                    <input type="text" class="form-control"  name="SumName">
+                </div>
+            </div>
+            <div class="column">
+                <div class="form-group ">
+                    <label>Message</label>
+                    <textarea class="form-control" rows="6"  name="Email_msg"></textarea>
+                </div>
+            </div>
+            <div class="clearfix"></div>
+            <button type="button">Send</button>
+        </form>
+    </div>
+</div>
