--- a/public/html/faq.html
+++ b/public/html/faq.html
@@ -1,8 +1,41 @@
 <div ng-controller="faqCtrl as bboost" class="faqContent">
-    <div ng-repeat="question in bboost.questions">
-        <h3>{{question.content}}</h3>
-        <div>
-            <p>{{question.answer}}</p>
+    <div class="faq-area">
+
+        <h1>Frequently asked questions</h1>
+
+        <h2>General</h2>
+        <div ng-repeat="question in bboost.questions">
+
+            <div ng-if="question.type==='general'">
+                <h3 class="question" ng-click="select($index)">{{question.content}}</h3>
+                <div>
+                    <p class="answer" ng-class="{'selected': $index === selectedIndex}">{{question.answer}}</p>
+                </div>
+            </div>
         </div>
+
+        <h2>Boosting</h2>
+
+        <div ng-repeat="question in bboost.questions">
+            <div ng-if="question.type==='boosting'">
+                <h3 class="question"  ng-click="select($index)">{{question.content}}</h3>
+                <div>
+                    <p class="answer" ng-class="{'selected': $index === selectedIndex}">{{question.answer}}</p>
+                </div>
+            </div>
+        </div>
+
+
+        <h2>Payment</h2>
+
+        <div ng-repeat="question in bboost.questions">
+            <div  ng-if="question.type==='payment'">
+                <h3 class="question" ng-click="select($index)">{{question.content}}</h3>
+                <div>
+                    <p class="answer" ng-class="{'selected': $index === selectedIndex}">{{question.answer}}</p>
+                </div>
+            </div>
+        </div>
+
     </div>
 </div>
