--- a/public/html/home.html
+++ b/public/html/home.html
@@ -1,11 +1,11 @@
-<div class="col-sm-4  tab1" >
+<div class="col-sm-4 tab tab1" >
 
 </div>
 
-<div class="col-sm-4 tab2">
+<div class="col-sm-4 tab tab2">
 
 </div>
 
-<div class="col-sm-4 tab3">
+<div class="col-sm-4 tab tab3">
 
 </div>
