--- a/public/html/boost-pages/division-boosting.html
+++ b/public/html/boost-pages/division-boosting.html
@@ -1,1 +1,11 @@
-divison
+<h2>League Boost</h2>
+
+
+
+<div class="col-sm-6">
+    <div class="col-sm-6"></div>
+    <div class="col-sm-6"></div>
+</div>
+<div class="col-sm-6">
+
+</div>
