--- a/public/html/boost-pages/division-boosting.html
+++ b/public/html/boost-pages/division-boosting.html
@@ -1,23 +1,42 @@
-<div class="col-xs-12" ng-controller="divisionBoostCtrl as bboost">
-    <h1>Division boost</h1>
+<div  class="col-xs-12" ng-controller="divisionBoostCtrl as bboost">
+
+    <h2 class="boostHeader">Division boosting</h2>
+
     <div class="col-sm-6">
         <div class="col-sm-6">
-            <img src="" alt="elo boost current division">
-            <select>
-                <option ng-repeat="league in bboost.leagues">
+            <img class="center" src="" alt="elo boost current division">
+            <h4 class="text-center">CURRENT DIVISION</h4>
+            <select class="boost-select">
+                <option ng-repeat="league in bboost.leagues" value="{{league.value}}">
                     {{league.league}}
                 </option>
             </select>
-            <select>
-                <option ng-repeat="division in bboost.divisions">
+            <select class="boost-select">
+                <option ng-repeat="division in bboost.divisions" value="{{division.value}}">
                     {{division.division}}
                 </option>
             </select>
         </div>
         <div class="col-sm-6">
-            <img src="" alt="elo boost desired division">
+            <img class="center" src="" alt="elo boost desired division">
+            <h4 class="text-center">DESIRED DIVISION</h4>
+            <select class="boost-select">
+                <option ng-repeat="league in bboost.leagues" value="{{league.value}}">
+                    {{league.league}}
+                </option>
+            </select>
+            <select class="boost-select" id="wowo">
+                <option ng-repeat="division in bboost.divisions"  value="{{division.value}}">
+                    {{division.division}}
+                </option>
+            </select>
         </div>
     </div>
     <div class="col-sm-6">
+        <h4>Price</h4>
+        <button ng-click="checkPrice()">Cena to:</button>
 
+    </div>
+    <div class="clearfix"></div>
 </div>
+<div class="clearfix"></div>
