--- a/public/html/boost-pages/per-win-boosting.html
+++ b/public/html/boost-pages/per-win-boosting.html
@@ -1,1 +1,31 @@
-per win
+<div class="col-xs-12" ng-controller="perWinCtrl">
+
+    <h1 class="text-center">Placement boost</h1>
+
+    <div class="col-sm-6">
+        <div class="col-sm-6">
+            <img ng-src="img/icons/{{sLigImg}}.png">
+
+            <select ng-change="calculatePrice()" class="boost-select" ng-model="currentLeague" ng-options="league.league for league in leagues"></select>
+
+            <select ng-change="calculatePrice()" class="boost-select" ng-model="currentDivision" ng-options="division.division for division in divisions"></select>
+
+
+        </div>
+        <div class="col-sm-6">
+            <div  class="numberOfGames">{{wins}}</div>
+            <div onchange="calculatePrice()"  slider config="sliderConfig" model="wins"></div>
+
+        </div>
+    </div>
+    <div class="col-sm-6">
+        Price: {{price}}
+
+
+    </div>
+
+
+
+</div>
+<div class="clearfix"></div>
+
