--- a/public/html/boost-pages/duoq-boosting.html
+++ b/public/html/boost-pages/duoq-boosting.html
@@ -1,1 +1,33 @@
-<h2></h2>
+<div class="col-xs-12">
+    Divisions
+
+    <form ng-controller="duoqBoostCtrl">
+        <div class="col-sm-6">
+            <div class="col-sm-6">
+
+                <img ng-src="img/icons/{{sLigImg}}.png">
+
+                <select ng-change="calculatePrice()" class="boost-select" ng-model="currentLeague" ng-options="league.league for league in leagues"></select>
+
+                <select ng-change="calculatePrice()" class="boost-select" ng-model="currentDivision" ng-options="division.division for division in divisions"></select>
+
+                <select ng-change="calculatePrice()" class="boost-select" ng-model="divPoints" ng-options="points.points for points in points"></select>
+            </div>
+            <div class="col-sm-6">
+
+                <img ng-src="img/icons/{{eLigImg}}.png">
+
+                <select ng-change="calculatePrice()" class="boost-select" ng-model="desireLeague" ng-options="league.league for league in leagues"></select>
+
+                <select ng-change="calculatePrice()" class="boost-select" ng-model="desireDivision" ng-options="division.division for division in divisions"></select>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            Price:{{price}}
+
+
+        </div>
+        <div class="clearfix"></div>
+    </form>
+</div>
+<div class="clearfix"></div>
