--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
 <body ng-controller="teamplatesCtrl as bboost" ng-model="template">
 <div class="side-nav-menu" role="navigation">
     <div class="company-logo">
-        <img id="side-nav-company-logo" src="img/logo.png" alt="bboost.eu elo boosting company logo">
+        <img id="side-nav-company-logo" src="img/bboostLogo.png" alt="bboost.eu elo boosting company logo">
     </div>
 
 
