--- a/public/html/home.html
+++ b/public/html/home.html
@@ -1,11 +1,13 @@
-<div class="col-sm-4 tab tab1" >
+<div class="col-sm-6 tab tab1" >
 
 </div>
 
-<div class="col-sm-4 tab tab2">
+<div class="col-sm-6 tab">
 
-</div>
+    <div class="col-sm-12  tab2">
 
-<div class="col-sm-4 tab tab3">
+    </div>
+    <div class="col-sm-12  tab3">
 
+    </div>
 </div>
