--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,7 @@
 
 
 </head>
-<body >
+<body>
 <aside>
     <h1>
         <img alt="BBoost elo-boosting company" src="img/whitefrontier.png">
@@ -48,9 +48,19 @@
         <a ng-click="template=templates[0]">
             <span>News</span>
         </a>
-        
-
     </nav>
+    <div class="separator"></div>
+
+    <div class="bottom">
+        <div class="social">
+            <a>
+                <i class="fa fa-skype" aria-hidden="true"></i>
+            </a>
+            <a>
+                <i class="fa fa-facebook" aria-hidden="true"></i>
+            </a>
+        </div>
+    </div>
 </aside>
 
 
